Fixed issue: VR pop-up during VR.PerfromInteraction overlaps the pop-up for timeout resetting

--- a/css/general.css
+++ b/css/general.css
@@ -377,7 +377,7 @@ button.next-home {
 }
 
 #ResetTimeoutPopUp {
-    left: 1450px;
+    left: 1500px;
     width: 302px;
     height: 147px;
     top: 10px;
